test/syntax-errors/liste_instructions1.sos
# liste_instructions ne peut pas terminer par ;

id = 8 ;